# Odyssey-Management

./: .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/actions/ruff-lint/: action.yml
.github/workflows/: ci.yml  deploy-attendance-job.yml  global-lint.yml  lint.yml  publish-google-cloud-run.yml  validate-json.yml
docs/: OPERATIONS.md
scripts/: authorize_gmail.py
src/cloudflare/: README.md
src/cloudflare/pages/: 404.html  _redirects  index.html  redirects.html
src/cloudflare/pages/redirects/: index.html
src/data_pipline/: __init__.py  attendance_dec16.csv  attendance_intake.py
src/google_apis/forms/: __init__.py  api_client.py  form.py  form_template.py  get_form_json.py  workflow_interface.py
src/odyssey_attendance/: __init__.py  cli.py  config.py  gmail.py  models.py  service.py  sheets.py  time_windows.py  workbook.py
src/tests/: test_smtp_client.py
src/utilities/: app_logger.py  create_qr_code.py  smtp_client.py
src/utilities/email_utilities/: email_templates.py  send_mail.py  smtp_client.py
tests/: test_gmail.py  test_service.py  test_time_windows.py  test_workbook.py
