[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "odyssey-attendance"
version = "0.1.0"
description = "Weekly Odyssey dance attendance report job"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.182.0",
    "google-auth>=2.40.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "openpyxl>=3.1.5",
    "tzdata>=2025.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.13.0",
]

[project.scripts]
odyssey-attendance-report = "odyssey_attendance.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [".git", ".venv", "venv", "build", "dist"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
